--- a/Interview.html
+++ b/Interview.html
@@ -1,6 +1,6 @@
 ---
 layout: page    
-header-img: "img/birds.jpg"  
+header-img: "http://xsf1005.github.io/img/favicon.png"  
 description: "迷途的羔羊"  
 permalink: Interview.html  
 ---
