--- a/Interview.html
+++ b/Interview.html
@@ -1,6 +1,6 @@
 ---
 layout: page    
-header-img: "img/favicon.png"  
+header-img: "img/facebook.jpg"  
 description: "迷途的羔羊"  
 permalink: Interview.html  
 ---
